--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,15 @@
 # Site settings
-title:       Pixyll
-email:       your_email@example.com
-author:      John Otander
-description: "A simple, beautiful theme for Jekyll that emphasizes content rather than aesthetic fluff."
+title:       Georgi Mitrev
+email:       gvmitrev@gmail.com
+author:      Georgi Mitrev
+description: "Personal blog of Georgi Mitrev"
 baseurl:     ""
-url:         "http://pixyll.com"
+url:         "http://mitrev.net"
 date_format: "%b %-d, %Y"
 header_pages:
- - about.md
+ - projects.md
  - contact.html
+ - about.md
 
 # Google services
 google_verification:
@@ -20,13 +21,13 @@ google_tag_manager:
 bing_verification:
 
 # Optional features
-animated:             false
-show_related_posts:   false
+animated:             true
+show_related_posts:   true
 show_post_footers:    false
-show_social_icons:    false
+show_social_icons:    true
 ajaxify_contact_form: false
 enable_mathjax: false
-extended_fonts: false
+extended_fonts: true
 enable_anchorjs: false
 # Preview image for social media aka og:image and twitter:image
 post_preview_image: false
@@ -38,7 +39,7 @@ fb_page_id:
 
 # Disqus post comments
 # (leave blank to disable Disqus)
-disqus_shortname:
+disqus_shortname: mitrev
 
 # txtpen post comments
 # (leave blank to disable txtpen)
@@ -51,11 +52,11 @@ facebook_appid:
 facebook_comments_number: 10
 
 # Social icons
-github_username:
+github_username: gmitrev
 reddit_username:
 bitbucket_username:
 stackoverflow_id:
-twitter_username:
+twitter_username: gmitrev
 skype_username:
 steam_nickname:
 google_plus_id:
@@ -119,7 +120,7 @@ markdown:     kramdown
 redcarpet:
   extensions: ['smart', 'tables', 'with_toc_data']
 permalink:    pretty
-paginate:     4
+paginate:     6
 sass:
   style: compressed
 plugins:
